[package]
name = "docker-health-monitor"
version = "0.3.0"
edition = "2021"
description = "Prometheus exporter of docker container's health checks with the option to restart unhealthy containers."
license = "Apache-2.0"
repository = "https://github.com/mkroli/docker-health-monitor"
readme = "README.md"
authors = ["Michael Krolikowski"]

[profile.release]
strip = "symbols"
opt-level = "s"
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
regex = "1"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
log = "0.4"
fern = "0.6"
clap = { version = "4", features = ["derive", "env"]}
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
futures = "0.3"
bollard = "0.15"
opentelemetry = "0.20"
prometheus = "0.13"
opentelemetry-prometheus = "0.13"
hyper = "0.14"
axum = { version = "0.6", features = ["headers", "http1", "http2"] }
